# Gajelas

./: .gitignore  .replit  README.md  app.py  app_final.py  app_restored.py  app_simple.py  atv_database.db  create_admin.py  create_admin_quick.py  create_admin_user.py  create_simple_admin.py  dashboard_direct.py  debug_app.py  debug_auth.py  fix_admin_login.py  fix_admin_setup.py  main.py  minimal_app.py  pyproject.toml  replit.md  run_mobile_app.py  simple_app.py  simple_test.py  stable_app.py  test_admin_login.py  test_app.py  test_flet_basic.py  test_login.py  test_percentage.py  test_simple.py  working_app.py
database/: __init__.py
database_backup/: db_manager.py  postgres_manager.py
pages/: auth_handler.py  dashboard.py  splash_screen.py
pages_backup/: auth_handler.py  dashboard.py  splash_screen.py
src/: README.md  __init__.py
src/config/: __init__.py  app_config.py
src/core/: language.py  styles.py  translator.py
src/core/pages/: __init__.py  auth_handler.py  auth_handler_backup.py  dashboard.py  splash_screen.py  splash_simple.py
src/services/database/: __init__.py  enhanced_tables.py  postgres_manager.py  sqlite_manager.py
src/utils/: admin_setup.py  logger.py
templates/: admin.html  base.html  dashboard.html  index.html  login.html  profile.html  register.html
