[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.1",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "flet>=0.28.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
